[package]
name = "tipb"
version = "0.0.1"
edition = "2018"

[features]
default = ["protobuf-codec"]
protobuf-codec = []
prost-codec = ["prost", "prost-derive", "bytes"]
gen = []

[lib]
name = "tipb"

[dependencies]
protobuf = "~2.0"
prost = { version = "0.5", optional = true }
prost-derive = { version = "0.5", optional = true }
bytes = { version = "0.4", optional = true }

[build-dependencies]
protobuf-build = { path = "../grpc-rs/protobuf-build" }
