[package]
name = "tipb"
version = "0.0.1"
edition = "2021"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf-build/protobuf-codec"]
prost-codec = ["prost", "prost-derive", "lazy_static", "protobuf-build/prost-codec"]
grpcio-protobuf-codec = ["grpcio", "protobuf-codec", "grpcio/protobuf-codec"]
grpcio-prost-codec = ["prost-codec", "grpcio", "grpcio/prost-codec"]
tonic-prost-codec = ["prost-codec", "tonic", "protobuf-build/tonic-prost-codec"]

[lib]
name = "tipb"

[dependencies]
protobuf = "=2.8.0"
prost = { version = "0.12", optional = true }
prost-derive = { version = "0.12", optional = true }
lazy_static = { version = "1.3", optional = true }
futures = "0.3.5"
tonic = {version = "0.11", optional = true}

# Use wildcard for crates whose version are less than 1.0.0 and are updated
# frequently. So that we do not have to update twice in TiKV and in tipb.
# And we need to keep Cargo.lock in track, so CI can choose a correct version.
#
# See https://doc.rust-lang.org/cargo/reference/resolver.html#semver-compatibility
# grpcio = { version = "0.*", default-features = false, optional = true }
grpcio = { git="https://github.com/glorv/grpc-rs", branch = "prost", default-features = false, optional = true }
[build-dependencies]
protobuf-build = { git = "https://github.com/glorv/protobuf-build", branch = "tonic", default-features = false }

[patch.crates-io]
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", rev="82b49fea7e696fd647b5aca0a6c6ec944eab3189" }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", rev="82b49fea7e696fd647b5aca0a6c6ec944eab3189" }
